@@ -1,3 +1,6 @@
+2008/05/20
+	39. Added CORBA request to set diffusion node picker of a given problem.
+	
 	38. ChppciOpenHrpClient::loadHrp2Model() now takes a shared pointer to
 	    a humanoid robot.
 	
